Fine tunning on new_car template

--- a/cars/templates/new_car.html
+++ b/cars/templates/new_car.html
@@ -5,26 +5,6 @@
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <!-- <div>
-      <label for="model">Modelo:</label>
-      <input type="text" id="model" name="model" required>
-    </div>
-    <div>
-      <label for="brand">Marca:</label>
-      <select id="brand" name="brand" required>
-        {% for brand in brands %}
-          <option value="{{ brand.id }}">{{ brand.name }}</option>
-        {% endfor %}
-      </select>
-    </div>
-    <div>
-      <label for="year">Ano:</label>
-      <input type="number" id="year" name="year" required>
-    </div>
-    <div>
-      <label for="image">Imagem:</label>
-      <input type="file" id="image" name="image" required>
-    </div>
-    <button type="submit">Adicionar Carro</button> -->
+    <button type="submit">Adicionar Carro</button>
   </form>
 {% endblock %}
