--- a/cars/templates/new_car.html
+++ b/cars/templates/new_car.html
@@ -4,7 +4,12 @@
   <h1>Adicionar Novo Carro</h1>
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Adicionar Carro</button>
+    <table>
+        {{ form.as_table }}
+        <tr>
+            <td colspan="2"><input type="submit" value="Salvar"></td>
+        </tr>
+    </table>
+   
   </form>
 {% endblock %}
