Adding route, view and template to add users

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,7 +73,8 @@
     <nav>
       <ul>
         <li><a href="{% url 'cars_list' %}">Carros</a></li>
-         <li><a href="{% url 'new_car' %}">Cadastrar Carro</a></li>
+        <li><a href="{% url 'new_car' %}">Cadastrar Carro</a></li>
+        <li><a href="{% url 'register' %}">Adicionar usuário</a></li>
       </ul>
     </nav>
   </header>
