--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -75,6 +75,7 @@
         <li><a href="{% url 'cars_list' %}">Carros</a></li>
         <li><a href="{% url 'new_car' %}">Cadastrar Carro</a></li>
         <li><a href="{% url 'register' %}">Adicionar usuário</a></li>
+        <li><a href="{% url 'login' %}">Login</a></li>
       </ul>
     </nav>
   </header>
