--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,15 +72,23 @@
   <header>
     <nav>
       <ul>
-        <li><a href="{% url 'cars_list' %}">Carros</a></li>
-        <li><a href="{% url 'new_car' %}">Cadastrar Carro</a></li>
-        <li><a href="{% url 'register' %}">Adicionar usuário</a></li>
-        <li><a href="{% url 'login' %}">Login</a></li>
+        {% if user.is_authenticated %}
+          <li><a href="{% url 'cars_list' %}">Carros</a></li>
+          <li><a href="{% url 'new_car' %}">Cadastrar Carro</a></li>
+          <li><a href="{% url 'logout' %}">Logout</a></li>
+        {% endif %}
+        {% if not user.is_authenticated %}
+          <li><a href="{% url 'register' %}">Adicionar usuário</a></li>
+          <li><a href="{% url 'login' %}">Login</a></li>
+        {% endif %}
       </ul>
     </nav>
   </header>
 
   <main>
+    {% if user.is_authenticated %}
+      <h2>Bem-vindo, {{ user.username }}</h2>
+    {% endif %}
     {% block content %}
     {% endblock %}
   </main>
