--- a/cars/templates/car_detail.html
+++ b/cars/templates/car_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
   <style>
@@ -79,14 +80,25 @@
       text-decoration: none !important;
     }
   </style>
-  <div class="car-card">
-      <img src="{{ object.photo.url }}" alt="{{ object.model }} - {{ object.brand }}">
-      <h2>{{ object.brand }} {{ object.model }}</h2>
-      <p><strong>Ano de fabricação:</strong> {{ object.factory_year }}</p>
-      <p><strong>Ano do modelo:</strong> {{ object.model_year }}</p>
-      <p><strong>Placa:</strong> {{ object.plate }}</p>
-      <p><strong>Preço:</strong> R$ {{ object.value }}</p>
-  </div>
+  {% if object.photo %}
+    <div class="car-card">
+        <img src="{{ object.photo.url }}" alt="{{ object.model }} - {{ object.brand }}">
+        <h2>{{ object.brand }} {{ object.model }}</h2>
+        <p><strong>Ano de fabricação:</strong> {{ object.factory_year }}</p>
+        <p><strong>Ano do modelo:</strong> {{ object.model_year }}</p>
+        <p><strong>Placa:</strong> {{ object.plate }}</p>
+        <p><strong>Preço:</strong> R$ {{ object.value }}</p>
+    </div>
+  {% else %}
+    <div class="car-card">
+        <img src="{% static 'images/no_image_available.png' %}" alt="No image available">
+        <h2>{{ object.brand }} {{ object.model }}</h2>
+        <p><strong>Ano de fabricação:</strong> {{ object.factory_year }}</p>
+        <p><strong>Ano do modelo:</strong> {{ object.model_year }}</p>
+        <p><strong>Placa:</strong> {{ object.plate }}</p>
+        <p><strong>Preço:</strong> R$ {{ object.value }}</p>
+    </div>
+  {% endif %}
   {% if user.is_authenticated %}
     <div class="buttons-container">
       <a href="{% url 'car_update' pk=object.pk %}" class="btn btn-primary">Editar</a>
