--- a/cars/templates/cars.html
+++ b/cars/templates/cars.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
   <style>
@@ -112,11 +113,19 @@
     {% if cars %}
       {% for car in cars %}
         <a href="{% url 'car_detail' car.pk %}">
-          <div class="car-card">
-            <img src="{{ car.photo.url }}" alt="{{ car.model }} - {{ car.brand }}">
-            <h2>{{ car.brand }} {{ car.model }}</h2>
-            <p>{{ car.factory_year }} - R$ {{ car.value }}</p>
-          </div>
+          {% if car.photo %}
+            <div class="car-card">
+                <img src="{{ car.photo.url }}" alt="{{ car.model }} - {{ car.brand }}">
+                <h2>{{ car.brand }} {{ car.model }}</h2>
+                <p>{{ car.factory_year }} - R$ {{ car.value }}</p>
+            </div>
+          {% else %}
+            <div class="car-card">
+                <img src="{% static 'images/no_image_available.png' %}" alt="No image available">
+                <h2>{{ car.brand }} {{ car.model }}</h2>
+                <p>{{ car.factory_year }} - R$ {{ car.value }}</p>
+            </div>
+          {% endif %}
         </a>
       {% endfor %}
     {% else %}
